fix scrollbars in faux terminals

--- a/css/bundlewrap.css
+++ b/css/bundlewrap.css
@@ -145,7 +145,7 @@ strong {
 	line-height: 140%;
 	margin-bottom: 32px;
 	margin-top: 32px;
-	overflow: scroll;
+	overflow: auto;
 	padding-left: 15px;
 	padding: 10px;
 	white-space: pre;
